--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
+html {  
+    scroll-behavior: smooth;  
+}
 /* ID's */
+
 #body {
     margin: 0;
     font-family: 'Arsenal', sans-serif;
@@ -8,7 +12,7 @@
     border: 1px solid black;
     width: auto;
     margin: 0;
-    height: 1850px;
+    height: 2750px;
     background-image: linear-gradient(#9e9e9e, #273036);
     width: 100%;
     
@@ -17,9 +21,20 @@
 #first-page{
     background-image: linear-gradient(rgb(121, 121, 121), #273036);
     width: 100%;
-    height: 750px;
+    height: 900px;
 }
-#first-pageoutline{
+#second-page{
+    background-image: linear-gradient(rgb(121, 121, 121), #554238);
+    width: 100%;
+    height: 920px;
+}
+
+#third-page{
+    background-image: linear-gradient(rgb(121, 121, 121), #554238);
+    width: 100%;
+    height: 920px;
+}
+    #first-pageoutline{
     width: 1400px;
     height: 100%;
     margin: 0 auto;
@@ -28,13 +43,22 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 #second-pageoutline{
-    border:1px solid black;
     width: 1400px;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    background-image: linear-gradient(#9e9e9e, #273036);
+    background-image: linear-gradient(#6b6b6b, #554238);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+#third-pageoutline{
+    width: 1400px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    background-image: linear-gradient(#6b6b6b, #554238);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
 }
 
 #nav-bar{
@@ -79,6 +103,84 @@
     font-size: 40px;
     margin-top: 0;
 }
+#skills-projects{
+
+    width: 70%;
+    height: 100%;
+}
+#project-side{
+
+    width: 30%;
+    height: 100;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+#skills-area{
+
+    width: 100%;
+    height: 65%;
+}
+#project1-2{
+
+    width: 100%;
+    height: 35%;
+    display: flex;
+}
+#project1{
+    width: 50%;
+    height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+#project2{
+    width: 50%;
+    height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+#project3{
+
+}
+#photo1{
+    margin-top: 10px;
+    background-image: url(/assets/pixart.png);
+    background-size:contain;
+}
+#photo1:hover{
+    background-image: url(/assets/pixart.png);
+    background-size:cover;
+    width: 300px;
+    height: 300px;
+}
+#photo2{
+    margin-top: 10px;
+    background-image: url(/assets/tictac.png);
+    background-size:contain;
+}
+#photo2:hover{
+    background-image: url(/assets/tictac.png);
+    background-size:cover;
+    width: 300px;
+    height: 300px;
+}
+#photo3{
+    margin-top: 10px;
+    background-image: url(/assets/tamagotchi.png);
+    background-size:cover;
+    background-position-x: center;
+}
+#photo3:hover{
+    background-image: url(/assets/tamagotchi.png);
+    background-size:cover;
+    width: 300px;
+    height: 300px;
+}
+#skills-area{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 /* CLASSES */
 .nav-bar-id{
     padding: 20px;
@@ -91,6 +193,7 @@
 }
 .nav-bar-id:hover{
     background-image: linear-gradient(#575757, #9e9e9e);
+    opacity: 0.6;
 
 }
 .nav-links{
@@ -114,4 +217,18 @@
     margin-left: 50px;
     margin-right: 50px;
     font-size: 30px;
+}
+.pic-box{
+    width: 170px;
+    height: 170px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.project-boxes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.skills-desc{
+    margin-left: 50px;
 }
