--- a/index.css
+++ b/index.css
@@ -19,18 +19,22 @@ html {
 }
 
 #first-page{
-    background-image: linear-gradient(rgb(121, 121, 121), #273036);
+    background-image: url('https://c4.wallpaperflare.com/wallpaper/109/664/851/black-texture-wallpaper-preview.jpg');
+    background-size: cover;
+
     width: 100%;
     height: 900px;
 }
 #second-page{
-    background-image: linear-gradient(#273036, rgb(121, 121, 121));
+    background-image: url('https://c4.wallpaperflare.com/wallpaper/109/664/851/black-texture-wallpaper-preview.jpg');
+    background-size: cover;
     width: 100%;
     height: 920px;
 }
 
 #third-page{
-    background-image: linear-gradient(rgb(121, 121, 121), #232321);
+    background-image: url('https://c4.wallpaperflare.com/wallpaper/109/664/851/black-texture-wallpaper-preview.jpg');
+    background-size: cover;
     width: 100%;
     height: 920px;
 }
@@ -41,6 +45,7 @@ html {
     display: flex;
     background-image: linear-gradient(#9e9e9e, #273036);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
 }
 #second-pageoutline{
     width: 1400px;
@@ -49,14 +54,13 @@ html {
     display: flex;
     background-image: linear-gradient(#273036, #6b6b6b);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
 }
 #third-pageoutline{
     width: 1400px;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    background-image: linear-gradient(#6b6b6b, #554238);
+    background-image: linear-gradient(#9e9e9e, #273036);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
 }
@@ -108,59 +112,15 @@ html {
     width: 70%;
     height: 100%;
 }
-#project-side{
-
-    width: 30%;
-    height: 100;
-
-}
 #skills-area{
-
-    width: 100%;
-    height: 65%;
+    width: 90%;
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
+    
 }
-#project1-2{
-    margin-top: 20px;
-    width: 100%;
-    height: 35%;
-    display: flex;
-}
-#project1{
-    width: 50%;
+#project-side{
+    width: 30%;
     height: 100%;
-
-}
-#project2{
-    width: 50%;
-    height: 100%;
-
-}
-#project3{
-
-}
-#photo1{
-    margin-top: 10px;
-    background-image: url(/assets/pixart.png);
-    background-size:contain;
-}
-#photo1:hover{
-    background-image: url(/assets/pixart.png);
-    background-size:cover;
-    width: 300px;
-    height: 300px;
-}
-#photo2{
-    margin-top: 10px;
-    background-image: url(/assets/tictac.png);
-    background-size:contain;
-}
-#photo2:hover{
-    background-image: url(/assets/tictac.png);
-    background-size:cover;
-    width: 300px;
-    height: 300px;
 }
 #photo3{
     margin-top: 10px;
@@ -194,6 +154,11 @@ html {
     
 
 }
+#form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #message{
 height: 150px;
     
@@ -202,6 +167,17 @@ height: 150px;
 }
 #find-me{
     margin-left: 35px;
+}
+#firstwave{
+    width: 1400px;
+    margin-left: 164px;
+}
+
+#submit{
+    margin-top: 10px;
+    width: 200px;
+    border-radius: 10px;
+    padding: 5px;
 }
 /* CLASSES */
 
@@ -232,9 +208,6 @@ height: 150px;
 
     height: 80%;
     width: 50%;
-}
-.hide{
-    display: none;
 }
 .my-text{
     margin-left: 50px;
@@ -272,16 +245,20 @@ height: 150px;
     width: 50px;
     text-align: center;
     text-decoration: none;
-  }
-  .fa-linkedin {
+}
+.fa-linkedin {
     background: #007bb5;
     color: white;
-  }
-  .fa-instagram {
+}
+.fa-instagram {
     background: #125688;
     color: white;
-  }
-  .fa-twitter {
+}
+.fa-twitter {
     background: #55ACEE;
     color: white;
-  }
+}
+.hide{
+    display: none;
+}
+
