added gallery, need final touch/ fonts/descriptions

--- a/index.css
+++ b/index.css
@@ -245,6 +245,44 @@ height: 150px;
     position: fixed;
     margin-left: 10px;
   }
+  #leftarrow{
+    width: 100px;
+    
+  }
+  #tictac{
+    width: 100px;
+    height: 100px;
+  }
+  #tama{
+    width: 100px;
+    height: 100px;
+  }
+  #pixart{
+    width: 100px;
+    height: 100px;
+  }
+
+  #textImage{
+    bottom: 15px;
+    left: 15px;
+    color: white;
+    font-size: 20px;
+}
+#first-description{
+    text-align: center;
+    margin-bottom: 20px;
+}
+#second-description{
+    text-align: center;
+    margin-bottom: 20px;
+}
+#third-description{
+    text-align: center;
+    margin-bottom: 20px;
+}
+#myprojectss{
+    text-align: center;
+}
 /* CLASSES */
 
 .nav-bar-id{
@@ -264,10 +302,6 @@ height: 150px;
 .nav-links{
     text-decoration: none;
     color: black;
-    
-}
-.nav-links:hover{
-
     
 }
 .first-half{
@@ -324,7 +358,42 @@ height: 150px;
     background: #55ACEE;
     color: white;
 }
+.fa-github {
+    background: #000000;
+    color: white;
+    width: 50px;
+}
 .hide{
     display: none;
 }
+.imagess{
+    width: 500px;
+    height: 500px;
+}
+.item{
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.column {
+    float: left;
+    padding: 10px;
+    width: 25%;
+}
+.column-img {
+    opacity: 0.8;
+}
+.column-img:hover {
+    opacity: 1;
+}
+.row::after{
+    content: '';
+    display: table;
+    clear: both;
+}
+.container{
 
+    display: none;
+}
